2007-09-18  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing context initialization in fuse_fs_chmod().  Bug
	found by "iohead"

2007-09-04  Philippe Elie  <phil.el@wanadoo.fr>

	* lib/fuse_lowlevel.c: fix a fuse_req leak in do_forget()

2007-07-31  Miklos Szeredi <miklos@szeredi.hu>

	* Work around hotplug issue, that it calls filesystem with file
	descriptors 0, 1 and 2 not open.  Tracked down by Leif Johnson

2007-07-25  Miklos Szeredi <miklos@szeredi.hu>

	* Don't call /bin/[u]mount if /etc/mtab is a symlink.  Reported by
	Tomas M

	* Also don't touch /etc/mtab if it is within the mounted
	filesystem.  Suggested by Jeffrey Law

2007-07-12  Miklos Szeredi <miklos@szeredi.hu>

	* Reset args->argc in fuse_opt_free_args().  Patch by Lucas
	C. Villa Real

2007-07-02  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.0

2007-07-02  Miklos Szeredi <miklos@szeredi.hu>

	* Accept a NULL "op" for fuse_main(), etc.  This is useful if
	filesystem is only invoking fuse to print a help message, or
	version.  Fixes RedHat bugzilla #217343

2007-06-22  Miklos Szeredi <miklos@szeredi.hu>

	* lib: fix locking when loading a filesystem module

2007-06-21  Miklos Szeredi <miklos@szeredi.hu>

	* Add fs subtype support to mount.fuse

2007-06-20  Miklos Szeredi <miklos@szeredi.hu>

	* Add fs subtype support to libfuse and fusermount

2007-06-19  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: sync with mainline (2.6.22)

2007-06-18  Miklos Szeredi <miklos@szeredi.hu>

	* Send debug output to stderr instead of stdout.  Patch by Jan
	Engelhardt

2007-06-03  Miklos Szeredi <miklos@szeredi.hu>

	* libulockmgr: Work around a kernel bug in recv(), causing it to
	sometimes return zero even if data was available on the socket.

2007-05-29  Miklos Szeredi <miklos@szeredi.hu>

	* lib: optimization: store parent pointer in node instead of
	parent id

2007-05-25  Miklos Szeredi <miklos@szeredi.hu>

	* lib: don't create new thread for each FORGET request.  FORGET